fix nsfw-detector service
